@@ -9,6 +9,8 @@ CHANGELOG
  	* src/lib/scene/opengl/texture.py: Handle corrupt PNG files.
 	* data/ai.xml: Added Diablo, HoiChess, BBChess to list of autodetected
 	  engines.
+	* glade/glchess.glade: Added fullscreen mode
+	* src/lib/gtkui/gtkui.py: Added fullscreen mode
 
 2006-10-31  Andreas Røsdal  <andrearo@pvv.ntnu.no>
 
